--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,12 +59,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
-                                                    <a href="auth-recoverpw.html" class="text-white float-right">Forgot Password?</a>
+                                                    <a href="forgotpassword.html" class="text-white float-right">Forgot Password?</a>
                                                 </div>
                                             </div>
                                             <button type="submit" class="btn btn-white">Sign In</button>
                                             <p class="mt-3">
-                                                Create an Account <a href="auth-sign-up.html" class="text-white text-underline">Sign Up</a>
+                                                Create an Account <a href="#" class="text-white text-underline">Sign Up</a>
                                             </p>
                                         </form>
                                     </div>
