Modified Log In Form Parameter and Action

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <div class="floating-label form-group">
-                                                        <input class="floating-input form-control" type="text" placeholder=" ">
+                                                        <input class="floating-input form-control" type="text" placeholder="" name="username">
                                                         <label>Email</label>
                                                     </div>
                                                 </div>
