--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,11 +35,11 @@
                                     <div class="p-3">
                                         <h2 class="mb-2 text-white">Sign In</h2>
                                         <p>Login to stay connected.</p>
-                                        <form method="post" action="/processLogin">
+                                        <form>
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <div class="floating-label form-group">
-                                                        <input class="floating-input form-control" type="text" placeholder="" name="username">
+                                                        <input class="floating-input form-control" type="text" placeholder="">
                                                         <label>Email</label>
                                                     </div>
                                                 </div>
