--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -122,7 +122,7 @@
                     class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0"
                 >
                     <a
-                        href="index.html"
+                        href="login.html"
                         class="navbar-brand d-flex d-lg-none me-4"
                     >
                         <h2 class="text-primary mb-0">
