add TODO comment, refactor some code

--- a/src/main/resources/templates/forgotpassword.html
+++ b/src/main/resources/templates/forgotpassword.html
@@ -1,32 +1,52 @@
+<!--
+
+    TODO :: REDESIGN THE REGISTER FORM
+
+    TODO :: ADD VALIDATION ( /js/custome.js )
+
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>DASHMIN - Bootstrap Admin Template</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content name="keywords">
-  <meta content name="description">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta
+          name="keywords"
+          content="project, management, project management, teamplaceholder project management"
+  />
+  <meta content name="description" />
+  <meta name="author" content="teamplaceholder's project" />
 
   <!-- Favicon -->
-  <!-- <link href="img/favicon.ico" rel="icon"> -->
+  <!-- <link href="/images/favicon.ico" rel="icon"> -->
 
   <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+          href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap"
+          rel="stylesheet"
+  />
 
-  <!-- Icon Font Stylesheet -->
-  <link rel="stylesheet" href="/font/bootstrap-icons.min.css">
+  <!-- bootstrap icons -->
+  <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
 
   <!-- Libraries Stylesheet -->
-  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <link
+          href="/lib/owlcarousel/assets/owl.carousel.min.css"
+          rel="stylesheet"
+  />
+  <link
+          href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css"
+          rel="stylesheet"
+  />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Template Stylesheet -->
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -106,11 +126,19 @@
   <!-- Sign In End -->
 </div>
 
-<!-- JavaScript Libraries -->
+<!-- fontawesome -->
 <script src="/js/fontawesome.js"></script>
+
+<!-- jquery -->
 <script src="/js/jquery.3.7.1.min.js"></script>
+
+<!-- datable table -->
 <script src="/js/databales.min.js"></script>
+
+<!-- bootstrap -->
 <script src="/js/bootstrap.bundle.min.js"></script>
+
+<!-- javascript libraries -->
 <script src="/lib/chart/chart.min.js"></script>
 <script src="/lib/easing/easing.min.js"></script>
 <script src="/lib/waypoints/waypoints.min.js"></script>
@@ -121,5 +149,9 @@
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
+<script src="/js/forprogresscircleiguess.js"></script>
+
+<!-- sort (department, project), form validation and search bar behavior are all here -->
+<script src="/js/custome.js"></script>
 </body>
 </html>
