fixed some error

--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -105,8 +105,8 @@
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                         <a href="#" class="dropdown-item">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle" src="/images/batface.png" alt
-                                     style="width: 40px; height: 40px" />
+                                <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1"
+                                     alt style="width: 40px; height: 40px" />
                                 <div class="ms-2">
                                     <h6 class="fw-normal mb-0">
                                         Jhon send you a message
@@ -171,7 +171,7 @@
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <img class="rounded-circle" src="/images/batface.png" alt
+                        <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt
                              style="width: 40px; height: 40px" />
                         <span class="d-none d-lg-inline-flex">John Doe</span>
                     </a>
@@ -256,7 +256,8 @@
                         </div>
                         <div class="card-body">
                             <div class="d-flex align-item-center">
-                                <img src="/images/batface.png" class="img-fluid rounded-circle w-25" alt="..." />
+                                <img src="https://source.unsplash.com/random/200x200?sig=1"
+                                     class="img-fluid rounded-circle w-25" alt="..." />
                                 <h5 class="card-title text-center text-align-center m-auto">
                                     Department Head's Name
                                 </h5>
@@ -271,7 +272,8 @@
                         </div>
                         <div class="card-body">
                             <div class="d-flex align-item-center">
-                                <img src="/images/batface.png" class="img-fluid rounded-circle w-25" alt="..." />
+                                <img src="https://source.unsplash.com/random/200x200?sig=1"
+                                     class="img-fluid rounded-circle w-25" alt="..." />
                                 <h5 class="card-title text-center text-align-center m-auto">
                                     Department Head's Name
                                 </h5>
@@ -286,7 +288,8 @@
                         </div>
                         <div class="card-body">
                             <div class="d-flex align-item-center">
-                                <img src="/images/batface.png" class="img-fluid rounded-circle w-25" alt="..." />
+                                <img src="https://source.unsplash.com/random/200x200?sig=1"
+                                     class="img-fluid rounded-circle w-25" alt="..." />
                                 <h5 class="card-title text-center text-align-center m-auto">
                                     Department Head's Name
                                 </h5>
@@ -301,7 +304,8 @@
                         </div>
                         <div class="card-body">
                             <div class="d-flex align-item-center">
-                                <img src="/images/batface.png" class="img-fluid rounded-circle w-25" alt="..." />
+                                <img src="https://source.unsplash.com/random/200x200?sig=1"
+                                     class="img-fluid rounded-circle w-25" alt="..." />
                                 <h5 class="card-title text-center text-align-center m-auto">
                                     Department Head's Name
                                 </h5>
@@ -337,8 +341,8 @@
                 <div class="row row-cols-1 row-cols-md-1 row-cols-xl-2">
                     <div class="col border border-dark rounded p-2">
                         <div class="row row-cols-1">
-                            <img src="/images/batface.png" alt="" class="rounded-circle col m-auto border img-fluid"
-                                 style="width: 40%;">
+                            <img src="https://source.unsplash.com/random/200x200?sig=1" alt=""
+                                 class="rounded-circle col m-auto border img-fluid" style="width: 40%;">
                             <p class="text-center fs-1 col m-auto">Zaw Lin Shein</p>
                         </div>
                         <ul class="list-group mb-2">
