--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -95,8 +95,8 @@
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                         <a href="#" class="dropdown-item">
                             <div class="d-flex align-items-center">
-                                <img class="rounded-circle" src="/images/batface.png" alt
-                                     style="width: 40px; height: 40px" />
+                                <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1"
+                                     alt style="width: 40px; height: 40px" />
                                 <div class="ms-2">
                                     <h6 class="fw-normal mb-0">
                                         Jhon send you a message
@@ -166,7 +166,7 @@
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <img class="rounded-circle" src="/images/batface.png" alt
+                        <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt
                              style="width: 40px; height: 40px" />
                         <span class="d-none d-lg-inline-flex">John Doe</span>
                     </a>
