--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -101,8 +101,8 @@
           <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
             <a href="#" class="dropdown-item">
               <div class="d-flex align-items-center">
-                <img class="rounded-circle" src="/images/batface.png" alt
-                     style="width: 40px; height: 40px" />
+                <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1"
+                     alt style="width: 40px; height: 40px" />
                 <div class="ms-2">
                   <h6 class="fw-normal mb-0">
                     Jhon send you a message
@@ -173,7 +173,7 @@
         </div>
         <div class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-            <img class="rounded-circle" src="/images/batface.png" alt
+            <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt
                  style="width: 40px; height: 40px" />
             <span class="d-none d-lg-inline-flex">John Doe</span>
           </a>
@@ -243,8 +243,8 @@
                               data-bs-target="#confirm-box">
                         <i class="bi bi-trash-fill"></i>
                       </button>
-                      <img src="/images/batface.png" class="img-fluid" alt
-                           style="width: 30px;">
+                      <img src="https://source.unsplash.com/random/200x200?sig=1"
+                           class="img-fluid rounded-circle" alt style="width: 30px;">
                     </div>
                   </div>
                   <div class="task py-1 row rounded-2 border-primary border-2 border"
@@ -260,8 +260,8 @@
                               data-bs-target="#confirm-box">
                         <i class="bi bi-trash-fill"></i>
                       </button>
-                      <img src="/images/batface.png" class="img-fluid" alt
-                           style="width: 30px;">
+                      <img src="https://source.unsplash.com/random/200x200?sig=1"
+                           class="img-fluid rounded-circle" alt style="width: 30px;">
                     </div>
                   </div>
                 </div>
@@ -274,7 +274,7 @@
                   DOING
                 </h3>
                 <div class="swim-lane p-3" id="doing-lane">
-                  <div class="task py-1 row rounded-2 border-primary border-2 border"
+                  <div class="task py-1 row rounded-2 border-dark border-2 border"
                        draggable="true" data-bs-toggle="modal" data-bs-target="#task-details">
                     <div class="col-12 mb-2 lh-1 mh-50 modal-detail-title text-break">
                       i like walking
@@ -284,8 +284,8 @@
                               data-bs-target="#confirm-box">
                         <i class="bi bi-trash-fill"></i>
                       </button>
-                      <img src="/images/batface.png" class="img-fluid" alt
-                           style="width: 30px;">
+                      <img src="https://source.unsplash.com/random/200x200?sig=1"
+                           class="img-fluid rounded-circle" alt style="width: 30px;">
                     </div>
                   </div>
                 </div>
@@ -435,7 +435,7 @@
                     <button class="btn btn-outline-danger">
                         <i class="bi bi-trash-fill"></i>
                     </button>
-                    <img src="/images/batface.png" class="img-fluid" alt="" style="width: 30px;">
+                    <img src="https://source.unsplash.com/random/200x200?sig=1" class="img-fluid" alt="" style="width: 30px;">
                 </div>
             `;
 
