--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>DASHMIN - Bootstrap Admin Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta
             name="keywords"
             content="project, management, project management, teamplaceholder project management"
     />
-    <meta content name="description" />
-    <meta name="author" content="teamplaceholder's project" />
+    <meta content name="description"/>
+    <meta name="author" content="teamplaceholder's project"/>
 
     <!-- Favicon -->
     <!-- <link href="/images/favicon.ico" rel="icon"> -->
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
             href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap"
             rel="stylesheet"
     />
 
     <!-- bootstrap icons -->
-    <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="/font/bootstrap-icons.min.css"/>
 
     <!-- Libraries Stylesheet -->
     <link
@@ -36,10 +36,10 @@
     />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 
     <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
                 <div
                         class="bg-light rounded p-4 p-sm-5 my-4 mx-3 border-dark border"
                 >
-                    <form id="login-form" method="get" novalidate action="dashboard.html">
+                    <form id="login-form" method="get" novalidate action="/processLogin">
                         <div
                                 class="d-flex align-items-center justify-content-center mb-3"
                         >
@@ -93,7 +93,7 @@
                                     id="emailInput"
                                     placeholder="name@example.com"
                                     required
-                                    name="user-name"
+                                    name="username"
                                     data-type="email"
                             />
                             <label for="emailInput"
