--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,7 +6,7 @@
 
  -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
@@ -174,7 +174,7 @@
                         <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#profile-modal">My
                             Profile</a>
                         <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                        <a href="#" class="dropdown-item d-flex gap-1"><i
+                        <a th:href="@{/logout}" class="dropdown-item d-flex gap-1"><i
                                 class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
                     </div>
                 </div>
