--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -44,7 +44,12 @@
             </div>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                    <i class="fa fa-bell me-lg-2"></i>
+                    <i class="fa fa-bell me-lg-2 position-relative">
+                                <span
+                                        class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"
+                                        style="padding: 7px;">
+                                </span>
+                    </i>
                     <span class="d-none d-lg-inline-flex">Notificatin</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto"
