--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -25,7 +25,7 @@
                     );
                     background-size: 12px 12px;
                 ">
-        <div th:replace="fragments/navigation :: navigation"></div>
+        <div th:replace="fragments/navigation :: aside"></div>
 
         <div class="container-fluid pt-4 px-4">
             <div class="row g-4">
