--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header">
     <meta charset="UTF-8">
-    <title>Header</title>
+    <title>Internal Project Management</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta name="keywords" content="project, management, project management, teamplaceholder project management" />
   <meta content name="description" />
