--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header class="topbar" th:fragment="navigation">
-    <!-- Navbar Start -->
+    <!-- Navbar With Search  Start -->
     <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
         <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
             <h2 class="text-primary mb-0">
@@ -45,9 +45,112 @@
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                     <i class="fa fa-bell me-lg-2 position-relative">
+<!--                                <span-->
+<!--                                        class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"-->
+<!--                                        style="padding: 7px;">-->
+<!--                                </span>-->
+                    </i>
+                    <span class="d-none d-lg-inline-flex">Notificatin</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto"
+                     style="height: 200px">
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            Profile updated
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            New user added
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            Password changed
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            New user added
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            New user added
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item">
+                        <h6 class="fw-normal mb-0">
+                            New user added
+                        </h6>
+                        <small>15 minutes ago</small>
+                    </a>
+                </div>
+            </div>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                    <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt
+                         style="width: 40px; height: 40px" />
+                    <span class="d-none d-lg-inline-flex">John Doe</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0">
+                    <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#profile-modal">My
+                        Profile</a>
+                    <!-- <a href="#" class="dropdown-item">Settings</a> -->
+                    <a href="#" class="dropdown-item d-flex gap-1"><i
+                            class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar With Search End -->
+</header>
+<aside>
+    <!-- Navbar No Search Start -->
+    <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
+        <a href="#" class="sidebar-toggler flex-shrink-0">
+            <i class="fa fa-bars"></i>
+        </a>
+        <div class="navbar-nav align-items-center ms-auto">
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                    <i class="fa fa-envelope me-lg-2"></i>
+                    <span class="d-none d-lg-inline-flex">Message</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                    <a href="#" class="dropdown-item">
+                        <div class="d-flex align-items-center">
+                            <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1"
+                                 alt style="width: 40px; height: 40px" />
+                            <div class="ms-2">
+                                <h6 class="fw-normal mb-0">
+                                    Jhon send you a message
+                                </h6>
+                                <small>15 minutes ago</small>
+                            </div>
+                        </div>
+                    </a>
+                    <hr class="dropdown-divider" />
+                    <a href="#" class="dropdown-item text-center">See
+                        all message</a>
+                </div>
+            </div>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                    <i class="fa fa-bell me-lg-2 position-relative">
                                 <span
                                         class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"
-                                        style="padding: 7px;">
+                                        style="padding: 7px">
                                 </span>
                     </i>
                     <span class="d-none d-lg-inline-flex">Notificatin</span>
@@ -113,7 +216,7 @@
             </div>
         </div>
     </nav>
-    <!-- Navbar End -->
-</header>
+    <!-- Navbar No Search End -->
+</aside>
 </body>
 </html>
