--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -184,5 +184,135 @@
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
+<script>
+
+    const form = document.getElementById("todo-form");
+    const input = document.getElementById("todo-input");
+    const todoLane = document.getElementById("todo-lane");
+    const draggables = document.querySelectorAll(".task");
+    const droppables = document.querySelectorAll(".swim-lane");
+    const modal = document.getElementById("task-details");
+
+    form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const value = input.value;
+
+        if (!value) return;
+
+        let newTask = document.createElement('div');
+        newTask.classList.add('task', 'py-1', 'row', 'rounded-2', 'border-primary', 'border-2', 'border');
+        newTask.setAttribute('draggable', 'true');
+        newTask.setAttribute('data-bs-toggle', 'modal');
+        newTask.setAttribute('data-bs-target', '#task-details');
+
+        // Create the inner content of the task
+        newTask.innerHTML = `
+                <div class="col-12 mb-2 lh-1 mh-50 modal-detail-title text-break">
+                    ${value}
+                </div>
+                <div class="col d-flex justify-content-between align-items-center">
+                    <button class="btn btn-outline-danger">
+                        <i class="bi bi-trash-fill"></i>
+                    </button>
+                    <img src="https://source.unsplash.com/random/200x200?sig=1" class="img-fluid" alt="" style="width: 30px;">
+                </div>
+            `;
+
+        newTask.addEventListener("dragstart", (e) => {
+            newTask.classList.add("is-dragging");
+            console.log("deagging")
+        });
+
+        newTask.addEventListener('click', (e) => {
+            modal.querySelector('.modal-title').innerText = newTask.innerText
+        })
+
+        newTask.addEventListener("dragend", () => {
+            newTask.classList.remove("is-dragging");
+            console.log(newTask);
+        });
+
+        todoLane.appendChild(newTask);
+
+        input.value = "";
+    });
+
+    draggables.forEach((task) => {
+        task.addEventListener("dragstart", () => {
+            task.classList.add("is-dragging");
+        });
+        task.addEventListener("dragend", () => {
+            task.classList.remove("is-dragging");
+
+            console.log("drop");
+            console.log(
+                task.parentNode.previousElementSibling.innerText
+            );
+        });
+    });
+
+    droppables.forEach((zone) => {
+        zone.addEventListener("dragover", (e) => {
+            e.preventDefault();
+
+            const bottomTask = insertAboveTask(zone, e.clientY);
+            const curTask = document.querySelector(".is-dragging");
+
+            if (curTask === null) {
+                return
+            }
+
+            const curZone = zone.getAttribute("id");
+
+            switch (curZone) {
+                case "todo-lane":
+                    curTask.classList.add("border-primary");
+                    curTask.classList.remove(
+                        "border-dark",
+                        "border-success"
+                    );
+                    break;
+                case "doing-lane":
+                    curTask.classList.add("border-dark");
+                    curTask.classList.remove(
+                        "border-primary",
+                        "border-success"
+                    );
+                    break;
+                case "done-lane":
+                    curTask.classList.add("border-success");
+                    curTask.classList.remove(
+                        "border-primary",
+                        "border-dark"
+                    );
+                    break;
+            }
+
+            if (!bottomTask) {
+                zone.appendChild(curTask);
+            } else {
+                zone.insertBefore(curTask, bottomTask);
+            }
+        });
+    });const insertAboveTask = (zone, mouseY) => {
+        const els = zone.querySelectorAll(".task:not(.is-dragging)");
+
+        let closestTask = null;
+        let closestOffset = Number.NEGATIVE_INFINITY;
+
+        els.forEach((task) => {
+            const { top } = task.getBoundingClientRect();
+
+            const offset = mouseY - top;
+
+            if (offset < 0 && offset > closestOffset) {
+                closestOffset = offset;
+                closestTask = task;
+            }
+        });
+
+        return closestTask;
+    };
+</script>
 </body>
 </html>
