--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="utf-8">
@@ -86,6 +86,8 @@
         </div>
         <!-- Sidebar End -->
 
+        <h6 sec:authentication="principal.username"></h6>
+        <span sec:authentication="principal.authorities"></span>
 
         <!-- Content Start -->
         <div class="content">
