--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -29,7 +29,7 @@
                     );
                     background-size: 12px 12px;
                 ">
-        <div th:replace="fragments/navigation :: navigation"></div>
+        <div th:replace="fragments/navigation :: header"></div>
 
         <!-- Search Start -->
         <div class="container-fluid d-md-block pt-2 ps-s pe-2" id="dropdrown-search-bar">
@@ -161,6 +161,7 @@
             </div>
         </div>
         <!-- department end -->
+
     </div>
     <!-- Content End -->
 
