--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -16,13 +16,15 @@
             </a>
             <div class="navbar-nav w-100 gap-2">
                 <!-- TODO:: GOT TO MAIN/DASHBOARD -->
-                <a href="dashboard.html" class="nav-item nav-link"><i
+                <a href="dashboard" class="nav-item nav-link"><i
                         class="bi bi-clipboard-data-fill me-1"></i>Dashboard</a>
                 <!-- TODO :: GOT TO DEPARTMENT LIST -->
-                <a href="department.html" class="nav-item nav-link"><i
+                <a href="department" class="nav-item nav-link"><i
                         class="fa-solid fa-building"></i>Department</a>
-                <a href="2projects.html" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
+                <a href="projects" class="nav-item nav-link">
+                    <i class="bi bi-collection-fill me-1"></i>All
                     Projects</a>
+
             </div>
         </nav>
     </div>
