add password reset page

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -38,16 +38,16 @@
                         </div>
                     </div>
                 </div>
-<!--                <div class="col-sm-6 col-xl-3">-->
-<!--                    <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">-->
-<!--                        <i class="fa-solid fa-people-group fa-3x text-primary"></i>-->
-<!--                        <div class="ms-3">-->
-<!--                            <p class="mb-2">Total Employe</p>-->
-<!--                            &lt;!&ndash; TODO :: SHOW THE NUMBER OF EMPLOYEE &ndash;&gt;-->
-<!--                            <h6 class="mb-0">100000</h6>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="col-sm-6 col-xl-3">
+                    <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                        <i class="fa-solid fa-people-group fa-3x text-primary"></i>
+                        <div class="ms-3">
+                            <p class="mb-2">Total Employe</p>
+                            <!-- TODO :: SHOW THE NUMBER OF EMPLOYEE -->
+                            <h6 class="mb-0">100000</h6>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-sm-6 col-xl-3">
                     <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                         <i class="fa-solid fa-dog fa-3x text-dark"></i>
