--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="modal-body"></div>
                     <div class="modal-footer">
-                        <a href="project.html" class="btn btn-primary">manage task</a>
+                        <a href="/project" class="btn btn-primary">manage task</a>
                     </div>
                 </div>
             </div>
