--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,19 +9,19 @@
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
         <nav class="navbar navbar-light">
-            <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
+            <a href="/" class="navbar-brand mx-4 mb-3">
                 <h3 class="text-primary">
                     <i class="fa fa-hashtag me-2"></i>DASHMIN
                 </h3>
             </a>
             <div class="navbar-nav w-100 gap-2">
                 <!-- TODO:: GOT TO MAIN/DASHBOARD -->
-                <a href="dashboard" class="nav-item nav-link"><i
+                <a href="/" class="nav-item nav-link"><i
                         class="bi bi-clipboard-data-fill me-1"></i>Dashboard</a>
                 <!-- TODO :: GOT TO DEPARTMENT LIST -->
-                <a href="department" class="nav-item nav-link"><i
+                <a href="/department" class="nav-item nav-link"><i
                         class="fa-solid fa-building"></i>Department</a>
-                <a href="projects" class="nav-item nav-link">
+                <a href="/project/all" class="nav-item nav-link">
                     <i class="bi bi-collection-fill me-1"></i>All
                     Projects</a>
 
