--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <!-- Spinner Start -->
-<div id="spinner"
+<!-- <div id="spinner"
      class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
     <div class="spinner-border text-primary" style="width: 3rem; height: 3rem" role="status">
         <span class="sr-only">Loading...</span>
     </div>
-</div>
+</div> -->
 
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <div th:replace="fragments/sidebar :: sidebar"></div>
