--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -618,7 +618,7 @@
     flex-direction: column;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
     overflow: auto;
-    max-width: 225px;
+    width: 225px;
     row-gap: 12px;
     max-height: 480px;
     flex-shrink: 0;
@@ -691,4 +691,88 @@
 
 .profile-card .social-links a:hover {
     color: #012970;
+}
+
+.trash {
+	background:#ff6873;
+	width: 15px;
+	height: 18px;
+	display: inline-block;
+	
+	position: relative;
+	-webkit-border-bottom-right-radius: 6px;
+	-webkit-border-bottom-left-radius: 6px;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+}
+.trash span {
+	position: absolute;
+	height: 6px;
+	background: #ff6873;
+	top: -6.5px;
+	left: -5px;
+	right: -5px;
+	
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+    transition: all 250ms;
+	transform-origin: 19% 100%;
+}
+.trash span:after {
+	content: '';
+	position: absolute;
+	width: 5px;
+	height: 5px;
+	background: #ff6873;
+	top: -6px;
+	
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+    transition: all 250ms;
+	transform-origin: 19% 100%;
+	left: 10px;
+}
+
+
+.trash i {
+	position:relative;
+	width: 1.5px;
+	height:12px;
+    top: -11px;
+	background:#fff;
+	display:block;
+	margin:14px auto;
+	border-radius: 5px;
+}
+.trash i:after {
+	content: '';
+	width: 1.5px;
+	height: 12px;
+	background: #fff;
+	position: absolute;
+	left: -3px;
+	border-radius: 5px;
+}
+.trash i:before {
+	content: '';
+	width: 1.5px;
+	height: 12px;
+	background: #fff;
+	position: absolute;
+	right: -3px;
+	border-radius: 5px;
+}
+
+.trash:hover span {
+	/* transform: rotate(45deg); */
+    top: -10px;
+    transition: all 250ms;
+	/* transition: transform 250ms; */
+}
+
+.trash.drag-over span {
+    top: -10px;
+    transition: all 250ms;
 }
