readded trash bin and controller method for department

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -77,11 +77,10 @@ vs
                                 </button>
                             </li>
                             <div
-                                class="col d-flex justify-content-end trash-can-container"
+                                class="d-flex justify-content-end trash-can-container"
                             >
                                 <span class="trash align-self-end">
                                     <span></span>
-                                    <i></i>
                                 </span>
                             </div>
                         </ul>
