--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -697,3 +697,63 @@
 .profile-card .social-links a:hover {
     color: #012970;
 }
+
+.trash-can-container{
+    display: inline-block;
+    width: 200px;
+}
+
+.trash {
+	background:#ff6873;
+	width: 18px;
+	height: 20px;
+	display: inline-block;
+	margin:0 auto;
+	
+	position: relative;
+	-webkit-border-bottom-right-radius: 6px;
+	-webkit-border-bottom-left-radius: 6px;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+}
+
+.trash span {
+	position: absolute;
+	height: 5px;
+	background: #ff6873;
+	top: -6px;
+	width: 28px;
+    left: -5px;
+	
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	transform: rotate(0deg);
+	transition: transform 250ms;
+	transform-origin: 19% 100%;
+}
+.trash span:after {
+	content: '';
+	position: absolute;
+	width: 8px;
+	height: 3px;
+	background: #ff6873;
+	top: -4px;
+    left: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	transform: rotate(0deg);
+	transition: transform 250ms;
+	transform-origin: 19% 100%;
+}
+
+.trash:hover span {
+	top: -10px;
+	transition: all 250ms;
+}
+
+.drag-over.trash span {
+    top: -10px;
+    transition: all 250ms;
+}
