Password Reset Implemented

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -139,7 +139,8 @@
                                 >Remember me</label
                                 >
                             </div>
-                            <a href="forgotpassword.html"
+                            <a th:href="@{/password-reset}"
+                               class="text-decoration-none"
                             >Forgot Password</a
                             >
                         </div>
