Password Reset Finished

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -139,7 +139,7 @@
                                 >Remember me</label
                                 >
                             </div>
-                            <a th:href="@{/password-reset}"
+                            <a th:href="@{/reset-password}"
                                class="text-decoration-none"
                             >Forgot Password</a
                             >
