--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -6,11 +6,11 @@
 
  -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8" />
-  <title>DASHMIN - Bootstrap Admin Template</title>
+  <title>Reset Password Page</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta name="keywords" content="project, management, project management, teamplaceholder project management" />
   <meta content name="description" />
@@ -40,14 +40,6 @@
 
 <body>
 <div class="container-fluid position-relative bg-white d-flex p-0">
-  <!-- Spinner Start -->
-  <div id="spinner"
-       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
-  <!-- Spinner End -->
 
   <!-- Sign In Start -->
   <div class="container-fluid" style="
@@ -69,17 +61,33 @@
               <h3>Password Reset</h3>
             </div>
             <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="floatingInput"
-                     placeholder="name@example.com" name="email" data-type="email" />
-              <label for="floatingInput">Email address</label>
+              <input type="email" class="form-control" id="emailInput"
+                     placeholder="name@example.com" name="email" data-type="email" required />
+              <label for="emailInput">Email address</label>
             </div>
-            <button type="submit" class="btn btn-primary py-3 w-100 mb-4" id="password-reset">
-              Sign In
+            <!-- New Password Field -->
+            <div id="new-password-container" style="display: none;">
+              <div class="form-floating mb-3">
+                <input type="password" class="form-control" id="new-password" placeholder="New Password" name="newPassword" />
+                <label for="new-password">New Password</label>
+              </div>
+            </div>
+            <button type="button" class="btn btn-primary py-3 w-100 mb-4" id="password-reset">
+              <span class="spinner-border spinner-border-sm d-none" role="status"
+                    aria-hidden="true"></span>
+              Send Password
             </button>
+            <button type="button" class="btn btn-primary py-3 w-100 mb-4" id="confirm-password" style="display: none">
+              <span class="spinner-border spinner-border-sm d-none" role="status"
+                    aria-hidden="true"></span>
+              Confirm Password
+            </button>
+
+
           </form>
           <p class="text-center mb-0">
             Remember your password? Click
-            <a href="login.html">here</a>
+            <a th:href="@{/login}">here</a>
           </p>
         </div>
       </div>
@@ -116,5 +124,58 @@
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
 </body>
+<script>
+  $(document).ready(function(){
+    $("#password-reset").click(function(){
+      // Show the loading spinner on the button
+      $(this).html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Sending...');
+      $(this).prop('disabled', true);
+      console.log($("#emailInput").val());
+      $.ajax({
+        url: '/api/user/reset-password/'+$("#emailInput").val(),
+        type: 'GET',
+        success: function(data) {
+          $("#password-reset").hide();
+            $("#confirm-password").show();
+
+            $("#new-password-container").show();
+          $("#emailInput").prop('disabled', true);
+        },
+        error: function(error) {
+          console.error('Error fetching data:', error);
+        },
+        complete  : function(){
+          $("#password-reset").html('Confirm New Password');
+          $("#password-reset").prop('disabled', false);
+        }
+      });
+    });
+    $("#confirm-password").click(function(){
+      // Show the loading spinner on the button
+      $(this).html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Sending...');
+      $(this).prop('disabled', true);
+      console.log($("#emailInput").val());
+      $.ajax({
+        url: '/api/user/reset-password/'+$("#emailInput").val()+"/"+$("#new-password").val(),
+        type: 'POST',
+        data: {
+          newPassword: $("#new-password").val()
+        },
+        success: function(data) {
+          $("#password-reset").hide();
+            $("#confirm-password").show();
+            $("#new-password-container").show();
+          $("#emailInput").prop('disabled', true);
+        },
+        error: function(error) {
+          console.error('Error fetching data:', error);
+        },
+        complete  : function(){
+          window.location.href = "/login";
+        }
+      });
+    });
+  });
+</script>
 
 </html>
