--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,7 +6,7 @@
 
  -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="layout/layout">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="layout/layout" lang="en">
 
 <head>
 </head>
@@ -42,7 +42,7 @@
                     <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                         <i class="fa-solid fa-people-group fa-3x text-primary"></i>
                         <div class="ms-3">
-                            <p class="mb-2">Total Employe</p>
+                            <p class="mb-2">Total Employee</p>
                             <!-- TODO :: SHOW THE NUMBER OF EMPLOYEE -->
                             <h6 class="mb-0">100000</h6>
                         </div>
