--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -264,10 +264,8 @@
                             class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0"
                         >
                             <a
-                                href="#"
+                                th:href="@{/profile}"
                                 class="dropdown-item"
-                                data-bs-toggle="modal"
-                                data-bs-target="#profile-modal"
                                 >My Profile</a
                             >
                             <!-- <a href="#" class="dropdown-item">Settings</a> -->
