--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -206,7 +206,7 @@
     transform: rotate(-180deg);
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 576px) {
     .content .navbar .navbar-nav .nav-link {
         margin-left: 15px;
     }
@@ -241,7 +241,7 @@
 
 /*** Testimonial ***/
 .progress .progress-bar {
-    width: 0px;
+    width: 0;
     transition: 2s;
 }
 
@@ -616,7 +616,7 @@
 .swim-lane {
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
     overflow: auto;
     max-width: 225px;
     row-gap: 12px;
@@ -626,7 +626,7 @@
 }
 
 .task {
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
     cursor: grab;
 }
 
