--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,67 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="layout/layout" lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>DASHMIN - Bootstrap Admin Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="keywords" content="project, management, project management, teamplaceholder project management" />
-    <meta content name="description" />
-    <meta name="author" content="teamplaceholder's project" />
-
-    <!-- Favicon -->
-    <!-- <link href="/images/favicon.ico" rel="icon"> -->
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet" />
-
-    <!-- bootstrap icons -->
-    <link rel="stylesheet" href="/font/bootstrap-icons.min.css" />
-
-    <!-- Libraries Stylesheet -->
-    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-    <link href="/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Template Stylesheet -->
-    <link href="/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
-<div class="container-fluid position-relative d-flex p-0">
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
-    </div>
-    <!-- Spinner End -->
-
-    <!-- Sidebar Start -->
-    <div class="sidebar pe-4 pb-3">
-        <nav class="navbar navbar-light">
-            <a href="dashboard.html" class="navbar-brand mx-4 mb-3">
-                <h3 class="text-primary">
-                    <i class="fa fa-hashtag me-2"></i>DASHMIN
-                </h3>
-            </a>
-            <div class="navbar-nav w-100 gap-2">
-                <!-- TODO:: GOT TO MAIN/DASHBOARD -->
-                <a href="dashboard.html" class="nav-item nav-link"><i
-                        class="bi bi-clipboard-data-fill me-1"></i>Dashboard</a>
-                <!-- TODO :: GOT TO DEPARTMENT LIST -->
-                <a href="department.html" class="nav-item nav-link"><i
-                        class="fa-solid fa-building"></i>Department</a>
-                <a href="2projects.html" class="nav-item nav-link"><i class="bi bi-collection-fill me-1"></i>All
-                    Projects</a>
-            </div>
-        </nav>
-    </div>
-    <!-- Sidebar End -->
+<div class="container-fluid position-relative d-flex p-0" layout:fragment="content">
 
     <!-- Content Start -->
     <div class="content" style="
@@ -73,101 +17,7 @@
                     );
                     background-size: 12px 12px;
                 ">
-        <!-- Navbar Start -->
-        <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
-            <a href="#" class="sidebar-toggler flex-shrink-0">
-                <i class="fa fa-bars"></i>
-            </a>
-            <div class="navbar-nav align-items-center ms-auto">
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <i class="fa fa-envelope me-lg-2"></i>
-                        <span class="d-none d-lg-inline-flex">Message</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                        <a href="#" class="dropdown-item">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt style="width: 40px; height: 40px" />
-                                <div class="ms-2">
-                                    <h6 class="fw-normal mb-0">
-                                        Jhon send you a message
-                                    </h6>
-                                    <small>15 minutes ago</small>
-                                </div>
-                            </div>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item text-center">See all message</a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <i class="fa fa-bell me-lg-2 position-relative">
-                                <span
-                                        class="position-absolute top-3 end-0 translate-middle bg-danger border border-light rounded-circle"
-                                        style="padding: 7px;">
-                                </span>
-                        </i>
-                        <span class="d-none d-lg-inline-flex">Notificatin</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0 overflow-auto" style="height: 200px;">
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                Profile updated
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                New user added
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                Password changed
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                New user added
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                New user added
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                        <hr class="dropdown-divider" />
-                        <a href="#" class="dropdown-item">
-                            <h6 class="fw-normal mb-0">
-                                New user added
-                            </h6>
-                            <small>15 minutes ago</small>
-                        </a>
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                        <img class="rounded-circle" src="https://source.unsplash.com/random/200x200?sig=1" alt style="width: 40px; height: 40px" />
-                        <span class="d-none d-lg-inline-flex">John Doe</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-end bg-light border-dark rounded-bottom m-0">
-                        <a href="profile.html" class="dropdown-item">My Profile</a>
-                        <!-- <a href="#" class="dropdown-item">Settings</a> -->
-                        <a href="#" class="dropdown-item d-flex gap-1"><i
-                                class="bi bi-box-arrow-right text-danger"></i>Log Out</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div th:replace="fragments/navigation :: aside"></div>
         <div class="container-fluid">
             <div class="row">
 
@@ -175,9 +25,9 @@
                     <h5>Profile</h5>
                     <nav>
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="dashboard.html" style="text-decoration: none;">Home</a></li>
+                            <li class="breadcrumb-item"><a th:href="@{/dashboard}" style="text-decoration: none;">Home</a></li>
                             <li class="breadcrumb-item">Users</li>
-                            <li class="breadcrumb-item"><a href="profile.html" style="text-decoration: none;">Profile</a></li>
+                            <li class="breadcrumb-item">Profile</li>
                         </ol>
                     </nav>
                 </div>
@@ -337,27 +187,6 @@
                 </div>
             </div>
         </div>
-        <!-- Navbar End -->
-
-        <!-- Sale & Revenue Start -->
-
-        <!-- Sale & Revenue End -->
-
-        <!-- Sales Chart Start -->
-
-        <!-- Sales Chart End -->
-
-        <!-- Recent Sales Start -->
-
-        <!-- Recent Sales End -->
-
-        <!-- Widgets Start -->
-
-        <!-- Widgets End -->
-
-        <!-- Footer Start -->
-
-        <!-- Footer End -->
     </div>
     <!-- Content End -->
 
